# cli

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  index.js  package-lock.json  package.json
.github/workflows/: release.yml
claude/hooks/: credential-check.js  email-activity-logger.js  email-send-guard.js
claude/skills/setup-inboxapi/: SKILL.md
docs/: help.md
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-win32-x64/: package.json
src/: main.rs
