[package]
name = "inboxapi-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
url = "2.5"
eventsource-client = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
sha1 = "0.10"
chrono = "0.4"
rand = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
